modificações tela de perfil

--- a/Sprint2/Algoritmos/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Tela_Perfil/tela_perfil.html
@@ -19,17 +19,17 @@
     </div>
     <div id="hamburguer">
       <ul class="listaItens">
-        <li>Home</li>
-        <li>Configurações</li>
-        <li>Calculadora Financeira</li>
-        <li>Contato</li>
-        <li>Mapa de calor</li>
+        <li>&#127968; Home</li>
+        <li>⚙️Configurações</li>
+        <li>🖥Calculadora Financeira</li>
+        <li>📞Contato</li>
+        <li>🗺️Mapa de calor</li>
         <li>Sair</li>
       </ul>
     </div>
-    <div class="fotoPerfil">
-        <!-- <img src="./perfil.png" alt="imagem de perfil"> -->
-        <span style="margin-top: auto;">Meu Perfil</span>
+    <div id="fp" class="fotoPerfil">
+      <img src="./perfil.png" alt="">
+        <span>Meu Perfil</span>
     </div>
     <div class="campos">
       <div class="camposCima">
