Finalização tela estática HeatMap em js/css/html

--- a/Sprint2/Algoritmos/Tela_HeatMap/tela_heatmap.html
+++ b/Sprint2/Algoritmos/Tela_HeatMap/tela_heatmap.html
@@ -25,17 +25,16 @@
             </div>
             <div>
                 <ul class="listaside">
-                    <li>Home</li>
-                    <li>Configurações</li>
-                    <li>Calculadora Financeira</li>
-                    <li>Contato</li>
-                    <li>Mapa de calor</li>
+                    <li>&#127968;Home</li>
+                    <li>⚙️Configurações</li>
+                    <li>🖥Calculadora Financeira</li>
+                    <li>📞Contato</li>
+                    <li>🗺️Mapa de calor</li>
                     <li>Sair</li>
                 </ul>
-            </div>
-
+            </div>  
         </div>
-        <div style="margin: 15px;">
+        <div style="margin: 10px;">
             <div class="title2">
                 Mapa de Calor
             </div>
@@ -43,6 +42,30 @@
                 FLOWTECH
             </div>
 
+            <div class="legenda">
+                <span class="title2">Legenda</span>
+                <span class="subtitulo1">Maior Fluxo</span>
+                <div class="informacoes">
+                    <div class="cores">
+                        <div class="bloco" style="background-color:#fc3434;"></div>
+                        <div class="bloco" style="background-color:#ff914d;"></div>
+                        <div class="bloco" style="background-color:#ff914d;"></div>
+                        <div class="bloco" style="background-color:#ff914d;"></div>
+                        <div class="bloco" style="background-color:#5ce1e6;"></div>
+                        <div class="bloco" style="background-color:#5ce1e6;"></div>
+                        <div class="bloco" style="background-color:#0cc0df;"></div>
+                    </div>
+                    <div class="flecha">
+                        <img src="./flecha_alta.png" alt="">
+                    </div>
+                </div>
+                <span class="subtitulo2">Menor Fluxo</span>
+            </div>
+            
+        </div>
+        <div class="imgMapa">
+            <p class="tituloImg">Estação</p>
+            <img style="width: 700px;" src="./mapa_generico_calor.png" alt="">
         </div>
     </div>
 </body>
