--- a/Sprint2/Algoritmos/tela-quem-somos/index.html
+++ b/Sprint2/Algoritmos/tela-quem-somos/index.html
@@ -14,6 +14,9 @@
             <p>Login</p>
         </div>
     </nav>
+    <div class="linha1"></div>
+
+    <div class="segundalinha"></div>
 
     <div class="container">
         <h1>Quem somos?</h1>
@@ -21,15 +24,15 @@
         <p>Nossa empresa trabalha com o Trade Marketing,  via mapeamento de fluxo de pessoas em locais movimentados para determinar os melhores pontos para a abertura de comércios e instalação de banners promocionais.</p>
     </div>
 
+    
+
     <div class="image-container">
-        <img src="imagens/grafico.jpg" alt="Imagem">
+        <img src="imagens/imagem01.PNG" alt="Imagem">
     </div>
 
-    <footer>
-        <h3>FLOWTECH</h3>
-        <p>Contato</p>
-        <p>|</p>
-        <p>Ajuda</p>
-    </footer>
+    <div class="image02">
+        <img src="imagens/imagem02.PNG" alt="Imagem" width="375px"> 
+    </div>
+   
 </body>
 </html>
