Atualizando a tela Index

--- a/Sprint2/Algoritmos/index/index.html
+++ b/Sprint2/Algoritmos/index/index.html
@@ -16,14 +16,12 @@
       <ul class="navbar">
           <li>Inicio</li>
           <li>|</li>
-          <li class="quem">Quem</li>
-          <li>somos?</li>
+          <li>Quem somos?</li>
           <li>|</li>
           <li>Contato</li>
           <li>|</li>
-          <li class="quem">Simulador </li>
-          <li>Financeiro</li>
-          <li class="bt"> CADASTRAR_SE</li>
+          <li>Simulador Financeiro</li>
+          <li class="bt"> CADASTRAR-SE</li>
           <li class="bt">LOGIN</li>          
       </ul>
     </div>
