--- a/Sprint2/Algoritmos/Tela cadastro/FlowTech.html
+++ b/Sprint2/Algoritmos/Tela cadastro/FlowTech.html
@@ -13,7 +13,7 @@
         <nav class="nav">
             <a class="logo">FlowTech</a>
             <ul class="nav-list">
-                <li>Contato</li>
+                <li>Home</li>
                 <li>|</li>
                 <li>Ajuda</li>
             </ul>
