Atualizacoes do Site

--- a/Sprint2/Algoritmos/index/index.html
+++ b/Sprint2/Algoritmos/index/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ptbr">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,9 +41,48 @@
       </div>
     </div>
 
+  </div>
+
+  <div class="sobnos">
     
 
+    <div class="container">
+
+      <div class="linha1"></div>
+
+    <div class="segundalinha"></div>
+    
+      <div class="quemsomos">
+        <h1>Quem somos?</h1>
+        <h3>Empresa de Trade Marketing</h3>
+        <p>Nossa empresa trabalha com o Trade Marketing,  via mapeamento de fluxo de pessoas em locais movimentados para determinar os melhores pontos para a abertura de comércios e instalação de banners promocionais.</p>
+    </div>
+
+    <div class="image-container">
+        <img src="imagens/imagem01.PNG" alt="Imagem">
+    </div>
+
+    <div class="image02">
+        <img src="imagens/imagem02.PNG" alt="Imagem" width="375px"> 
+    </div>
+
+
   </div>
+</div>
+
+<div class="footer">
+  <div class="container">
+    <div class="F1">
+     <p>Entre em contato:</p>
+    </div>
+
+    <div class="F2">
+      <p>teste</p>
+    </div>
+
+  </div>
+
+</div>
 
 </body>
 </html>
