Organizacao de Pastas

--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -59,11 +59,11 @@
     </div>
 
     <div class="image-container">
-        <img src="imagens/imagem01.PNG" alt="Imagem">
+        <img src="../imagens/imagem01.PNG" alt="Imagem">
     </div>
 
     <div class="image02">
-        <img src="imagens/imagem02.PNG" alt="Imagem" width="375px"> 
+        <img src="../imagens/imagem02.PNG" alt="Imagem" width="375px"> 
     </div>
 
 
