--- a/Sprint2/Algoritmos/Telas_Individuais/tela-login/login.html
+++ b/Sprint2/Algoritmos/Telas_Individuais/tela-login/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - FlowTech</title>
+    <title>FlowTech | Login</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
