adicao de links na index

--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -16,9 +16,9 @@
       <ul class="navbar">
           <li>Inicio</li>
           <li>|</li>
-          <li>Quem somos?</li>
+          <li> <a href="#sobnos">Quem somos?</a></li>
           <li>|</li>
-          <li>Contato</li>
+          <li> <a href="#contato">Contato</a></li>
           <li>|</li>
           <li>Simulador Financeiro</li>
           <li class="bt"> CADASTRAR-SE</li>
@@ -43,7 +43,7 @@
 
   </div>
 
-  <div class="sobnos">
+  <div class="sobnos" id="sobnos">
     
 
     <div class="container">
@@ -70,7 +70,7 @@
   </div>
 </div>
 
-<div class="footer">
+<div class="footer" id="contato">
   <div class="container">
     <div class="F1">
      <p>Entre em contato:</p>
