--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -14,7 +14,7 @@
         <h1 class="titulo">FLOWTECH</h1>
     
       <ul class="navbar">
-          <li>Inicio</li>
+          <li> <a href="#inicio">Inicio</a></li>
           <li>|</li>
           <li> <a href="#sobnos">Quem somos?</a></li>
           <li>|</li>
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div class="banner">
+  <div class="banner" id="inicio">
     <div class="container">
       <div class="chamado">
           <h1>FLOWTECH</h1>
