Estilização do simulador financeiro e linkando na index

--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -20,7 +20,7 @@
           <li>|</li>
           <li> <a href="#contato">Contato</a></li>
           <li>|</li>
-          <li>Simulador Financeiro</li>
+          <li> <a href="../Simulador_Financeiro/calculadoraFincanceira- final.html">Simulador Financeiro</a></li>
           <li class="bt"> CADASTRAR-SE</li>
           <li class="bt">LOGIN</li>          
       </ul>
