--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -73,12 +73,38 @@
 <div class="footer">
   <div class="container">
     <div class="F1">
-     <p>Entre em contato:</p>
+     <p class="contato">Entre em contato :</p>
+     <img class="email" src="../imagens/email.png" alt="">
+     <img class="facebook" src="../imagens/facebook.png" alt="">
+     <img class="insta" src="../imagens/instagram.png" alt="">
+     <img class="telefone" src="../imagens/telefone.png" alt="">
     </div>
 
     <div class="F2">
-      <p>teste</p>
+      <div class="link">
+      <ul>
+        <li>Home</li>
+        <li>Quem somos</li>
+        <li>Simulador Financeiro</li>
+      </ul>
+      </div> 
+      <div class="atendimento">
+        <div class="imagem">
+        <img src="../imagens/atendimento.png" alt="" width="100px" height="100px">
+        </div>
+        <div class="texto">
+          <p>Serviço de atendimento ao cliente</p>
+          <p>0800 XXXX XXXX</p>
+          <p>Segunda à Sexta das 8h às 17h
+  (exceto feriados)</p>
+          </div> 
+      </div>
+      <div class="politica">
+        <p>Política de privacidade ></p>
+        <p>Política de cookies ></p>
+      </div>
     </div>
+    
 
   </div>
 
