--- a/Sprint2/Algoritmos/Telas_Individuais/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela_Perfil/tela_perfil.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu(input(''))">menu</span>
       <h1 class="titulo">FlowTech</h1>
       <ul class="itensNaveBar">
         <li>Início</li>
