--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -20,9 +20,9 @@
           <li>|</li>
           <li> <a href="#contato">Contato</a></li>
           <li>|</li>
-          <li> <a href="../Simulador_Financeiro/calculadoraFincanceira- final.html">Simulador Financeiro</a></li>
-          <li class="bt"> CADASTRAR-SE</li>
-          <li class="bt">LOGIN</li>          
+          <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
+          <a href="../cadastro/cadastro.html"><li class="bt"> CADASTRAR-SE</li></a>
+          <a href="../login/login.html"><li class="bt">LOGIN</li></a>         
       </ul>
     </div>
   </div>
@@ -35,8 +35,8 @@
                do seu espaço para fins comerciais
             </p>
             <div class="LoginCadastro">
-      <button class="BtLogin">Login</button>
-      <button class="BtCadastro">Cadastro</button>
+      <a href="../login/login.html"><button class="BtLogin">Login</button></a>
+      <a href="../cadastro/cadastro.html"><button class="BtCadastro">Cadastro</button></a>
     </div>
       </div>
     </div>
