link para pagina index

--- a/Sprint2/Algoritmos/Telas_Individuais/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela_Perfil/tela_perfil.html
@@ -12,19 +12,12 @@
   </head>
   <body>
     <div class="container">
-<<<<<<< HEAD
-      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()"
-        >menu</span
-      >
+      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
       <h1 class="titulo">FLOWTECH</h1>
-=======
-      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu(input(''))">menu</span>
-      <h1 class="titulo">FlowTech</h1>
->>>>>>> fc49adbc97e421ab582cd420bf1378053ddda563
       <ul class="itensNaveBar">
-        <li>Início</li>
-        <li>Sobre nós</li>
-        <li>Contato</li>
+        <li> <a href="../../Site/index/index.html">Início</a></li>
+        <li> <a href="../../Site/index/index.html#sobnos">Sobre nós</a></li>
+        <li> <a href="../../Site/index/index.html#contato">Contato</a></li>
       </ul>
     </div>
     <div id="mae">
