links na nav bar da pg da dash e botoes na pg de perfil

--- a/Sprint2/Algoritmos/Telas_Individuais/Tela DeshBoard/tela_Dash.html
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela DeshBoard/tela_Dash.html
@@ -12,17 +12,17 @@
       <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
       <h1 class="titulo">FlowTech</h1>
       <ul class="itensNaveBar">
-        <li>Início</li>
+        <li> <a href="../../Site/index/index.html">Início</a></li>
         <li>|</li>
-        <li>Sobre nós</li>
+        <li> <a href="../../Site/index/index.html#sobnos">Sobre nós</a></li>
         <li>|</li>
-        <li>Contato</li>
+        <li> <a href="../../Site/index/index.html#contato">Contato</a></li>
       </ul>
     </div>
     <div id="itens-laterais">
       <ul class="listaItens">
         <div id="fp" class="fotoPerfil">
-            <img src="./perfil.png" alt="">
+             <a href="../Tela_Perfil/tela_perfil.html"><img src="./perfil.png" alt="foto de perfil"></a>
           </div>
         <li>&#127968; Home</li>
         <li>⚙️Configurações</li>
