--- a/Sprint2/Algoritmos/Telas_Individuais/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela_Perfil/tela_perfil.html
@@ -54,14 +54,20 @@
             </div>
           </div>
           <div class="camposBaixo">
-            <div class="email">
-              E-mail <br />
-              <input placeholder="usuario@gmail.com" type="text" id="email" />
+            <div class="separacaoBotao">
+              <div class="email">
+                E-mail <br />
+                <input placeholder="usuario@gmail.com" type="text" id="email" />
+              </div>
+              <div class="telefone">
+                Telefone <br />
+                <input type="text" id="telefone" />
+              </div>
             </div>
-            <div class="telefone">
-              Telefone <br />
-              <input type="text" id="telefone" />
-            </div>
+              <div class="botoes">
+                <button>Alterar Dados</button>
+                <button>Salvar</button>
+              </div>
           </div>
         </div>
       </div>
