Adicionando pg que abre login como padrão

--- a/Sprint2/Algoritmos/Site/cadastro/cadastro.html
+++ b/Sprint2/Algoritmos/Site/cadastro/cadastro.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div id="telaCadastro" class="telaCadastro"  style="display: none;">
+    <div id="telaCadastro" class="telaCadastro">
             <div class="container">
                 <h1>Cadastro</h1>
 
@@ -87,7 +87,7 @@
 
 
 
-    <main id="telaLogin" class="telaLogin">
+    <main id="telaLogin" class="telaLogin" style="display: none;">
         <div class="container">
             <div class="form">
                 <h2 class="titulo">LOGIN</h2>
