--- a/Sprint2/Algoritmos/Site/cadastro/cadastro.html
+++ b/Sprint2/Algoritmos/Site/cadastro/cadastro.html
@@ -143,7 +143,7 @@
         var senha_log = input_senha.value;
 
         if (email_log == email_cad && senha_log == senha_cad){
-            alert ('Pode entrar patrão')
+            window.location.href = "../../Site/DashBoard/tela_Dash.html";
         } else {
             alert ('Senha ou email incorreto')
         }
