estilização dos botões da tela perfil

--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./perfil.css" />
   </head>
   <body>
     <div class="container">
@@ -24,10 +24,9 @@
       <div class="filho_hamburguer">
         <div id="hamburguer">
           <ul class="listaItens">
-            <li>🖥Calculadora Financeira</li>
-            <li>🗺️Mapa de calor</li>
-            <li>📊Gráficos</li>
-            <li>Sair</li>
+            <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
+            <li> <a href="../dashboard/dashboard.html">📊Gráficos</a></li>
+            <li> <a href="../login/login.html">Sair</a></li>
           </ul>
         </div>
       </div>
@@ -63,8 +62,8 @@
               </div>
             </div>
               <div class="botoes">
-                <button onclick="alterar()">Alterar Dados</button>
-                <button onclick="salvar()">Salvar</button>
+                <button class="alterar" onclick="alterar()">Alterar Dados</button>
+                <button class="salvar" onclick="salvar()">Salvar</button>
               </div>
           </div>
         </div>
