--- a/Sprint2/Algoritmos/Site/Simulador_Financeiro/simulador.html
+++ b/Sprint2/Algoritmos/Site/Simulador_Financeiro/simulador.html
@@ -21,8 +21,8 @@
               <li> <a href="../index/index.html#contato">Contato</a></li>
               <li>|</li>
               <li> <a href="../Simulador_Financeiro/calculadoraFincanceira- final.html">Simulador Financeiro</a></li>
-              <li class="bt"> CADASTRAR-SE</li>
-              <li class="bt">LOGIN</li>          
+              <li class="bt" > <a href="../cadastro/cadastro.html"></a>CADASTRAR-SE</li>
+              <li class="bt"> <a href="../login/login.html"></a>LOGIN</li>          
           </ul>
         </div>
       </div>
