--- a/Sprint2/Algoritmos/Site/cadastro/cadastro.html
+++ b/Sprint2/Algoritmos/Site/cadastro/cadastro.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<!-- Apesar de estar como o nome de "Tela de Login", essa página simula um login e cadastro sem conexão a um bando de dados, por isso
+        foi necessário manter na mesma página HTML o login, cadastro e "esqueci a senha" -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -226,46 +229,58 @@
             aleatorio = Math.random() * (10) + 0.5; // Gera um número de 0.5 até 10.5;
             aleatorio = aleatorio.toFixed(0) // Fixa ele entre 1 e 10 (0.5 arredonda para 1, 10.5 arredonda para 10);
             aleatorio = aleatorio - 1; // Mudando para número de 0 à 9;
-            aleatorio = aleatorio.toString()
-            codigo_recuperar_senha += aleatorio;
+            aleatorio = aleatorio.toString() // Transformando o número em texto para concatenar;
+            codigo_recuperar_senha += aleatorio; // Concatenando número;
         }
+        // Alerta com o código obtido no for;
         alert(`O seu código de acesso para redefinir a senha é: ${codigo_recuperar_senha}`); 
         }
         
     }
-
-    function salvar (){
-        senha_cad = input_NovaSenha.value;
-
-        alert('Senha alterada com sucesso!')
-
-        trocarLogin();
-    }
-
+    // Na tela de alterar senha, após inserir o código e validá-lo, redireciona para a tela de redefinir; 
     function redefinir(){
+        // Obtendo código inserido;
         var Rcdg = input_Rcdg.value;
 
+        // Verificando se o código inserido é igual ao código gerado;
         if(Rcdg == codigo_recuperar_senha){
+            // Alera para a tela de mudar a senha, mantendo na mesma página de HTML;
             input_Rcdg.style.display = 'none';
             input_Remail.style.display = 'none';
             bt_gerar.style.display = 'none';
             bt_redefinir_senha.style.display = 'none';
 
-
             bt_salvar_senha.style.display = 'block';
             input_NovaSenha.style.display = 'block';
         }
     }
+    // Função na tela de mudar a senha para confirmar;
+    function salvar (){
+        // Obter a senha nova inserida e sobrescrever na senha de cadastro;
+        senha_cad = input_NovaSenha.value;
+        if (senha_cad = '') alert('Insira uma senha nova')
+        else alert('Senha alterada com sucesso!')
+
+        // Redirecionar para tela de login (Função na linha 190)
+        trocarLogin();
+    }
 
 
+    // Função na tela de login para entrar na dashboard;
     function autenticar(){
-        var email_log = input_login.value;
-        var senha_log = input_senha.value;
+        // Recebendo inputs;
+        var email_log = input_login.value; // Recebendo entrada de email;
+        var senha_log = input_senha.value; // Recebendo entrada de senha;
 
+        // Validando se a entrada de login e senha são iguais aos inseridos no cadastro;
         if (email_log == email_cad && senha_log == senha_cad){
+            // Redirecionamento para outra página HTML, a da dashboard
             window.location.href = "../../Site/dashboard/dashboard.html";
         } else {
+            // Alerta de erro
             alert ('Senha ou email incorreto')
         }
     }
+
+
 </script>
