--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -22,13 +22,11 @@
     <div id="itens-laterais">
       <ul class="listaItens">
         <div id="fp" class="fotoPerfil">
-             <a href="../Tela_Perfil/tela_perfil.html"><img src="../graficos/perfil.png" alt="foto de perfil"></a>
+             <a href="../Tela_Perfil/tela_perfil.html"><img src="../Tela_Perfil/perfil.png" alt="foto de perfil"></a>
           </div>
-        <li>🖥Calculadora Financeira</li>
-        <li> DeshBoard</li>
-        <li> Gráficos </li>
-        <li>🗺️Mapa de calor</li>
-        <li>Sair</li>
+          <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
+          <li> <a href="../graficos/tela_Dash2.0.html">📊Gráficos</a></li>
+          <li> <a href="../login/login.html">Sair</a></li>
       </ul>
     </div>
 
