--- a/Sprint2/Algoritmos/Site/graficos/tela_Dash2.0.html
+++ b/Sprint2/Algoritmos/Site/graficos/tela_Dash2.0.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DashBoard</title>
+  <title>FlowTech | Gráficos</title>
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <link rel="stylesheet" href="Dash.css">
+  <link rel="stylesheet" href="./graficos_dash.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
@@ -15,25 +15,21 @@
     <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
     <h1 class="titulo">FlowTech</h1>
     <ul class="itensNaveBar">
-      <li>Início</li>
+      <li> <a href="../../Site/index/index.html">Início</a></li>
       <li>|</li>
-      <li>Sobre nós</li>
+      <li> <a href="../../Site/index/index.html#sobnos">Sobre nós</a></li>
       <li>|</li>
-      <li>Contato</li>
+      <li> <a href="../../Site/index/index.html#contato">Contato</a></li>
     </ul>
   </div>
   <div id="itens-laterais">
     <ul class="listaItens">
       <div id="fp" class="fotoPerfil">
-        <img src="./perfil.png" alt="">
+        <a href="../Tela_Perfil/tela_perfil.html"><img src="../Tela_Perfil/perfil.png" alt="foto de perfil"></a>
       </div>
-      <li>&#127968; Home</li>
-      <li>⚙️Configurações</li>
-      <li>🖥Calculadora Financeira</li>
-      <li>📞Contato</li>
-      <li> DashBoard</li>
-      <li>🗺️Mapa de calor</li>
-      <li>Sair</li>
+      <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
+      <li> <a href="../graficos/tela_Dash2.0.html">📊Gráficos</a></li>
+      <li> <a href="../login/login.html">Sair</a></li>
     </ul>
   </div>
   <div class="box-title">
