placeholders q faltaram na tela perfil

--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -39,7 +39,7 @@
           <div class="camposCima">
             <div class="nomeCompleto">
               Nome Completo <br />
-              <input type="text" id="nomeCompleto" />
+              <input placeholder="Fulano Lorem Ipsum" type="text" id="nomeCompleto" />
             </div>
             <div class="nascimento">
               Nascimento <br />
@@ -58,7 +58,7 @@
               </div>
               <div class="telefone">
                 Telefone <br />
-                <input type="text" id="telefone" />
+                <input placeholder="(11) 99999-8888" type="text" id="telefone" />
               </div>
             </div>
               <div class="botoes">
