arrumando nome das paginas

--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -106,7 +106,7 @@
 
         <div class="flecha">
             <img src="../imagens/flecha_dash.png" alt="" width="500px">
-            <a href="../graficos/tela_Dash.html"><button class="ver_mais">Ver Mais -></button></a>
+            <a href="../graficos/graficos.html"><button class="ver_mais">Ver Mais -></button></a>
         </div>   
     </div>
   </center>
