--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -33,7 +33,7 @@
     </ul>
   </div>
   <div class="box-title">
-    <h2 class="title2"> DASHBOARD
+    <h2 class="title2"> GRAFICOS
       <h6 class="subtitle2">FLOWTECH</h6>
     </h2>
   </div>
