subindo grafico em tempo real

--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -124,9 +124,12 @@
         </div>
       </label>
     </div>
+   
   </main>
   <br>
   <div class="Box_ExibirGrafs">
+
+   
 
    <!-----------------------Gráficos da estação LUZ--------------------------->
 
@@ -286,6 +289,10 @@
   <!----------------------------------------------------------------->
 
   </div>
+
+
+  <br>
+   <a href="../../../ArqComp/index.html"><button class="temporeal">Tempo real</button></a>
 </body>
 
 </html>
