Mudando as cores e formatos de letras do login e cadastro

--- a/Sprint2/Algoritmos/Site/login/login.html
+++ b/Sprint2/Algoritmos/Site/login/login.html
@@ -90,7 +90,7 @@
     <main id="telaLogin" class="telaLogin">
         <div class="container">
             <div class="form">
-                <h2 class="titulo">LOGIN</h2>
+                <h2 class="titulo">Login</h2>
                 
                 <input type="text" id="input_login" placeholder="Login">
                 <input type="password" id="input_senha" placeholder="Senha">
